# flam-edge-detector

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flamedgedetector/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/flamedgedetector/: GLCameraView.kt  GLRenderer.kt  ImageProxyExt.kt  ImageUtils.kt  MainActivity.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp  native-processor.cpp
app/src/main/kotlin/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/flamedgedetector/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
